# tracing-etw

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: etw.rs  user_events.rs
examples/: basic.rs  etw_event.rs  instrument.rs  span.rs  stress.rs
src/: _details.rs  error.rs  layer.rs  layer_builder.rs  lib.rs  otel.rs  statics.rs  values.rs
src/layer/: common.rs  core_subscriber.rs  filter.rs  layer_impl.rs  mod.rs
src/layer/core_subscriber/: mod.rs  subscriber.rs
src/layer/registry_subscriber/: layer_impl.rs  mod.rs
src/native/: etw.rs  mod.rs  noop.rs  user_events.rs
src/native/common_schema/: etw_cs.rs  mod.rs  user_events_cs.rs
src/values/: event_values.rs  mod.rs  span_values.rs
tests/: core_spans.rs  registry_spans.rs  spans.rs
