[package]
name = "tracing-etw"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/microsoft/tracing-etw"
rust-version = "1.78"
authors = ["Kyle Sabo", "Microsoft"]

[lib]
crate-type = ["rlib"]

[features]
common_schema = []
default = ["common_schema"]

[dependencies]
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-core = {version = "0.1", default-features = false}
tracing-subscriber = {version="0.3", default-features = false, features=["std", "fmt", "registry"]}
chrono = {version="0.4", default-features = false, features=["std"]}
once_cell = ">=1.18"
dashmap = "6"
paste = "1"
thiserror = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tracelogging = ">= 1.2.0"
tracelogging_dynamic = ">= 1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
eventheader = ">= 0.4"
eventheader_dynamic = ">= 0.4"

[dev-dependencies]
criterion = {version="0.5", features=["html_reports"]}
tracing = {version = "0.1", default-features = false, features = ["std", "attributes"]}

[target.'cfg(windows)'.dev-dependencies]
windows = {version="0.58", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
#etw_helpers = {version="0.1", path="../etw_helpers"}

[[bench]]
name = "etw"
harness = false

[[bench]]
name = "user_events"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
