[package]
name = "tracing-etw"
version = "0.2.1"
edition = "2024"
resolver = "2"
license = "MIT"
repository = "https://github.com/microsoft/tracing-etw"
rust-version = "1.85"
authors = ["Kyle Sabo", "Microsoft"]
description = "ETW or Linux user_events output for tokio-tracing"

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = ["std"]
std = ["tracing-subscriber/registry", "tracing/std"]

[dependencies]
tracing = {version = "0.1", default-features = false}
tracing-core = {version = "0.1", default-features = false}
tracing-subscriber = {version="0.3", default-features = false, optional = true}
chrono = {version="0.4", default-features = false, features=["std"]}
paste = "1"
thiserror = {version="2", default-features = false}
hashers = "1"
hashbrown = "0.15"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tracelogging = ">= 1.2.0"
tracelogging_dynamic = ">= 1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
eventheader = ">= 0.4"
eventheader_dynamic = ">= 0.4"

[dev-dependencies]
criterion = {version="0.5", features=["html_reports"]}
tracing = {version = "0.1", default-features = false, features = ["std", "attributes"]}
tracing-subscriber = {version="0.3", default-features = false, features=["std", "fmt", "registry"]}

[target.'cfg(windows)'.dev-dependencies]
windows = {version="0.58", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
#etw_helpers = {version="0.1", path="../etw_helpers"}

[[bench]]
name = "etw"
harness = false
required-features = ["std"]

[[bench]]
name = "user_events"
harness = false
required-features = ["std"]

[[example]]
name = "basic"
required-features = ["std"]

[[example]]
name = "etw_event"
required-features = ["std"]

[[example]]
name = "instrument"
required-features = ["std"]

[[example]]
name = "span"
required-features = ["std"]

[[example]]
name = "stress"
required-features = ["std"]

[[test]]
name = "core_spans"

[[test]]
name = "registry_spans"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
