[package]
name = "tracing-etw"
version = "0.2.2"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/microsoft/tracing-etw"
rust-version = "1.82"
authors = ["Kyle Sabo", "Microsoft"]
description = "ETW or Linux user_events output for tokio-tracing"

[lib]
crate-type = ["rlib"]

[features]
global_filter = []

[dependencies]
tracing = {version = "0.1", default-features = false}
tracing-core = {version = "0.1", default-features = false}
tracing-subscriber = {version="0.3", default-features = false, features=["registry"]}
chrono = {version="0.4", default-features = false, features=["std"]}
paste = "1"
thiserror = {version="2", default-features = false}
hashers = "1"
hashbrown = "0.15"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tracelogging = ">= 1.2.0"
tracelogging_dynamic = ">= 1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
eventheader = ">= 0.4"
eventheader_dynamic = ">= 0.4"

[dev-dependencies]
criterion = {version="0.5", features=["html_reports"]}
tracing = {version = "0.1", default-features = false, features = ["std", "attributes"]}
tracing-subscriber = {version="0.3", default-features = false, features=["std", "fmt", "registry"]}

[target.'cfg(windows)'.dev-dependencies]
windows = {version="0.62", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
#etw_helpers = {version="0.1", path="../etw_helpers"}

[[bench]]
name = "etw"
harness = false

[[bench]]
name = "user_events"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
